adding icons for translation, volume, exchange, and translate

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
             placeholder="Translation"
           ></textarea>
         </div>
+        <ul class="conrtols">
+          <li class="row-from">
+            <div class="icons">
+              <i id="from" class="fas fa-volume-up"></i>
+              <i id="from" class="fas fa-copy"></i>
+            </div>
+            <select name="" id=""></select>
+          </li>
+          <li class="exchange">
+            <i class="fas fa-exchange-alt"></i>
+          </li>
+          <li class="row-to">
+            <div class="icons">
+              <i id="to" class="fas fa-volume-up"></i>
+              <i id="to" class="fas fa-copy"></i>
+            </div>
+            <select name="" id=""></select>
+          </li>
+        </ul>
       </div>
+      <button>Translate Text</button>
     </div>
     <script src="script.js"></script>
     <script src="countries.js"></script>
