--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <header>
+      <h1 class="lanaguge-header">Language Translator</h1>
     <div class="container">
       <div class="wrapper">
         <div class="text-input">
