adding js and more stylings

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Language Translator | CodingNepal</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font Awesome CDN Link for Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <title>Translator</title>
   </head>
 
   <body>
-    <header>
-      <h1 class="lanaguge-header">Language Translator</h1>
     <div class="container">
+      <h1 class="translator-title">Translator</h1>
       <div class="wrapper">
         <div class="text-input">
           <textarea
@@ -25,6 +24,8 @@
           ></textarea>
           <textarea
             spellcheck="false"
+            disabled
+            readonly
             class="to-text"
             placeholder="Translation"
           ></textarea>
@@ -49,6 +50,7 @@
       </div>
       <button>Translate Text</button>
     </div>
+
     <script src="js/countries.js"></script>
     <script src="js/script.js"></script>
   </body>
